--- a/contacto.html
+++ b/contacto.html
@@ -120,7 +120,7 @@
 		<script>
 			function changeLanguage(language) {
 				
-				fetch(`languages/${language}-contacto.json`)
+				fetch(`${language}-contacto.json`)
 					.then(response => response.json())
 					.then(data => {
 						for (let id in data) {
