--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		 <script>
 			function changeLanguage(language) {
 				
-				fetch(`languages/${language}-index.json`)
+				fetch(`${language}-index.json`)
 					.then(response => response.json())
 					.then(data => {
 						for (let id in data) {
